--- a/busan.ios/Base.lproj/Main.storyboard
+++ b/busan.ios/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="4mB-1u-BYS">
-    <device id="retina6_5" orientation="portrait" appearance="light"/>
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -21,31 +21,46 @@
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="MovieCell" rowHeight="130" id="ZpZ-Wd-iUA" customClass="MovieCell" customModule="busan_ios" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="44.666666030883789" width="414" height="130"/>
+                                        <rect key="frame" x="0.0" y="44.5" width="414" height="130"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="ZpZ-Wd-iUA" id="AzR-8Z-fC7">
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="130"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="9T1-eo-HWj">
-                                                    <rect key="frame" x="0.0" y="2" width="98" height="128"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="9T1-eo-HWj">
+                                                    <rect key="frame" x="0.0" y="0.0" width="100" height="140"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="140" id="fn4-0b-6HI"/>
+                                                        <constraint firstAttribute="width" constant="100" id="thA-fb-2h7"/>
+                                                    </constraints>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sBf-84-DJS">
-                                                    <rect key="frame" x="106" y="11" width="280" height="21"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sBf-84-DJS">
+                                                    <rect key="frame" x="106" y="6" width="302" height="21"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="21" id="fVn-N6-LcF"/>
+                                                    </constraints>
                                                     <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" numberOfLines="8" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j3u-7L-joi">
-                                                    <rect key="frame" x="106" y="40" width="280" height="90"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="8" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j3u-7L-joi">
+                                                    <rect key="frame" x="106" y="33" width="302" height="91"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
+                                            <constraints>
+                                                <constraint firstItem="sBf-84-DJS" firstAttribute="leading" secondItem="9T1-eo-HWj" secondAttribute="trailing" constant="6" id="Cv0-YK-lCh"/>
+                                                <constraint firstItem="j3u-7L-joi" firstAttribute="top" secondItem="sBf-84-DJS" secondAttribute="bottom" constant="6" id="E52-tY-YXf"/>
+                                                <constraint firstItem="sBf-84-DJS" firstAttribute="top" secondItem="AzR-8Z-fC7" secondAttribute="top" constant="6" id="Gf1-Ag-a8I"/>
+                                                <constraint firstAttribute="trailing" secondItem="sBf-84-DJS" secondAttribute="trailing" constant="6" id="NtK-15-j3G"/>
+                                                <constraint firstItem="9T1-eo-HWj" firstAttribute="top" secondItem="AzR-8Z-fC7" secondAttribute="top" id="atf-zf-9LZ"/>
+                                                <constraint firstAttribute="bottom" secondItem="j3u-7L-joi" secondAttribute="bottom" constant="6" id="hSq-lN-L85"/>
+                                                <constraint firstItem="9T1-eo-HWj" firstAttribute="leading" secondItem="AzR-8Z-fC7" secondAttribute="leading" id="nSJ-JB-uVY"/>
+                                                <constraint firstItem="j3u-7L-joi" firstAttribute="leading" secondItem="9T1-eo-HWj" secondAttribute="trailing" constant="6" id="nb1-m9-aMb"/>
+                                                <constraint firstAttribute="trailing" secondItem="j3u-7L-joi" secondAttribute="trailing" constant="6" id="su6-MK-6fe"/>
+                                            </constraints>
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="descLabel" destination="j3u-7L-joi" id="BxN-c2-g8A"/>
@@ -72,7 +87,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="928.98550724637687" y="82.366071428571431"/>
+            <point key="canvasLocation" x="927.536231884058" y="81.026785714285708"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="cmu-wV-PSb">
