Added MovieDetailsViewController, Added new ViewController to Main Storyboard

--- a/busan.ios/Base.lproj/Main.storyboard
+++ b/busan.ios/Base.lproj/Main.storyboard
@@ -69,6 +69,21 @@
             </objects>
             <point key="canvasLocation" x="928.98550724637687" y="82.366071428571431"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="ISI-Ga-Wfo">
+            <objects>
+                <viewController id="r8G-zb-yeG" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="NG5-aL-9v7">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="o0l-NK-uzb"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="BKS-sf-pmc" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1804" y="82"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="cmu-wV-PSb">
             <objects>
